# ai-music-assembler

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  Dockerfile.api  Dockerfile.extend  FUTURE_PLAN.md  README.md  cloudbuild.extend.yaml  pyproject.toml  requirements.txt  youtube_used_titles.txt
.github/workflows/: ci-cd.yml
deploy/: cloud-run-job.env.example  cloud-run-job.md  github-actions-cicd.md  music-assembly-api.md  music-assembly-iam.md
docs/: production-status-july-2026.md  r2-bucket-layout.md
music_assembler/: __init__.py  __main__.py  add_bottom_text.py  add_text.py  add_text_behind_subject.py  assemble_from_r2.py  assemble_options.py  audio.py  bottom_text_overlay.py  cli.py  config.py  extend_backgrounds.py  extend_first_three.py  extend_from_r2.py  ffmpeg_util.py  image_text.py  job_progress.py  list_youtube_videos.py  make_and_upload_music_video.py  make_music_videos.py  make_short_music_video.py  music_video.py  pipeline.py  progress_bars.py  r2_storage.py  schedule_music_videos.py  segmentation.py  text_behind_subject.py  upload_test.py  video.py  video_registry.py  video_templates.py  youtube_channel.py  youtube_metadata.py  youtube_upload.py
music_assembler/api/: __init__.py  __main__.py  app.py  assembly_health.py  assembly_schedule.py  asset_upload.py  auth.py  cache.py  config.py  dashboard_auth.py  deploy_manifest.json  deploy_manifest.py  extend_runner.py  gcp_credentials.py  gcp_jobs.py  job_cancel.py  job_runs.py  job_status.py  media.py  openapi_docs.py  progress_store.py  r2_catalog.py  uploader_client.py
prompts/: background_master.txt  temp.txt  youtube_metadata.txt
scripts/: assemble-job.sh  r2-init-layout.sh  r2_init_layout.py  upload_pre_processed_to_r2.py  write_deploy_manifest.py
tests/: test_assembly_parallel_fixes.py  test_assembly_schedule.py  test_asset_upload.py  test_channel_paths.py  test_dashboard_js.py  test_deploy_updates.py  test_duration_env.py  test_extend_pending.py  test_images_folder.py  test_job_status.py  test_pre_processed_claim.py  test_pre_processed_folders.py  test_r2_background_retire.py  test_r2_inventory.py  test_uploader_channels.py  test_uploader_register.py  test_video_templates.py
